# ocr-rag-qa

./: .gitignore  Dockerfile  README.md  pyproject.toml  sample.env
data/processed/: chunked_ocr_result_9d277797-a704-406c-bd99-a9803d0cf8f5.json  jinaai_embeddings_ocr_result_9d277797-a704-406c-bd99-a9803d0cf8f5.json  ocr_result_9d277797-a704-406c-bd99-a9803d0cf8f5.json  ocr_result_9d277797-a704-406c-bd99-a9803d0cf8f5.md
data/qdrant/: meta.json
data/qdrant/collection/9d277797-a704-406c-bd99-a9803d0cf8f5/: storage.sqlite
research/: 00-mistral-ocr-upload.py  01-mistral-doc-understanding.py  02-mistral-ocr-chunk-pages-with-llm-call.py  02-mistral-ocr-chunk.py  03-mistral-ocr-chunk-by-headers.py  04-create_qdrant_vectore_store.py  05-load-chunks-on-qdrant.py  06-conversation-check.py  08-update-chunking-strategy.py
scripts/: load_embeddings.py
src/: app.py
src/llm_handlers/: azure_openai_handler.py  base_handler.py  jina_handler.py  mistral_handler.py
src/preprocessing/: chunking.py
src/prompts/: routing_agent.py  tool_agents.py
src/utils/: conversation_handler.py  dto.py  logger.py  mistral_handler.py  ocr.py  tool_client.py
tmp/: qa_agentic_rag_9d277797-a704-406c-bd99-a9803d0cf8f5_2025-04-17T19-07-44.201351.json  qa_doc_understanding_9d277797-a704-406c-bd99-a9803d0cf8f5_2025-04-13T17-59-24.146787.json
