[project]
name = "ocr-rag-qa"
version = "1.0.1.rc"
description = "Repository containing a simple conversational which implements via websocket an Agentic RAG workflow and a preprocessing pipeline (mistral OCR -> Jina Embedding --> Qdrant)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mistralai>=1.6.0",
    "markdown>=3.8",
    "fastapi[standard]>=0.115.12",
    "requests>=2.32.3",
    "openai>=1.74.0",
    "websockets>=15.0.1",
    "qdrant-client>=1.13.3",
    "uvicorn>=0.34.1",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
